--- a/index.Rmd
+++ b/index.Rmd
@@ -15,3 +15,13 @@ Or, link directly to my [about page](about.html).
 ### Imbed pictures
 
 <img src = "images/att.jpg" style = "width:75%">
+
+```{r}
+library(tidyverse)
+
+tibble(
+    x = 1:10,
+    y = x + 2
+)
+```
+
