--- a/index.Rmd
+++ b/index.Rmd
@@ -1,14 +1,27 @@
 ---
-title: "Holy cow!"
+title: "Grace S. Liu"
 output:
   html_document
 ---
+Second-year MPH student  
+Department of Epidemiology  
+Columbia University, Mailman School of Public Health  
 
-### I have a webpage!
+<img src = "images/PLACEHOLDER" 
+  style="width:75%; display: block; margin-left: auto; margin-right: auto; border: 5px solid">
+<br>
 
-And I can put all kinds of stuff on it!
+### About
+I received a BA in public health, with a concentration in Health Policy and Management, from University of California, Berkeley, in 2014. I am currently a second-year MPH student in Epidemiology at the Mailman School of Public Health at Columbia University.  
 
-### Add some links
+I previously worked as a technical research analyst in Global Health Science at University of California, San Francisco, on a number of international projects related to HIV prevention, care, and treatment, as well as for an initiative addressing preterm birth in East Africa. I am primarily interested in “leakages” along the HIV care continuum; maternal, neonatal, and child health; and health systems strengthening.  
+<br>
+
+##### Contact Information
+
+Grace Liu  
+Email: [gsl2116@cumc.columbia.edu](mailto:<gsl2116@cumc.columbia.edu>)  
+Phone: 510.565.6321  
 
 [Google](https://www.google.com) it.
 
@@ -16,6 +29,3 @@ Or, link directly to my [about page](about.html).
 
 This is my [code page](code.html).
 
-### Imbed pictures
-
-<img src = "images/att.jpg" style = "width:75%">
