--- a/index.Rmd
+++ b/index.Rmd
@@ -1,19 +1,20 @@
 ---
 title: "Grace S. Liu"
-output:
-  html_document
+output: 
+  html_document:
+    number_sections: FALSE
 ---
-MPH student, Department of Epidemiology
+MPH student, Department of Epidemiology  
 Columbia University, Mailman School of Public Health  
 
 <img src = "images/PLACEHOLDER" 
-  style="width:75%; display: block; margin-left: auto; margin-right: auto; border: 5px solid">
+  style="width:300px; display: block; margin-left: auto; margin-right: auto; border: 5px solid">
 <br>
 
 ### About
 I received a BA in public health, with a concentration in Health Policy and Management, from University of California, Berkeley, in 2014. I am currently a second-year MPH student in Epidemiology at the Mailman School of Public Health at Columbia University.  
 
-I previously worked as a technical research analyst in Global Health Science at University of California, San Francisco, on a number of international projects related to HIV prevention, care, and treatment, as well as for an initiative addressing preterm birth in East Africa. I am primarily interested in “leakages” along the HIV care continuum; maternal, neonatal, and child health; and health systems strengthening.  
+I previously worked as a technical research analyst in Global Health Science at University of California, San Francisco, on a number of international projects related to HIV prevention, care, and treatment, as well as for an initiative addressing preterm birth in East Africa. I am primarily interested in “leakages” along the HIV care continuum; maternal, neonatal, and child health; health systems strengthening; and implementation science.  
 <br>
 
 ##### Contact Information
@@ -22,5 +23,5 @@ Grace Liu
 New York, NY  
 Email: [gsl2116@cumc.columbia.edu](mailto:<gsl2116@cumc.columbia.edu>)  
 Phone: 510.565.6321  
-[About me](about.html)
+[Curriculum Vitae](LiuGrace_CV_Sep2018.pdf)
 
