--- a/index.Rmd
+++ b/index.Rmd
@@ -15,6 +15,12 @@ Columbia University, Mailman School of Public Health
 I received a BA in public health, with a concentration in Health Policy and Management, from University of California, Berkeley, in 2014. I am currently a second-year MPH student in Epidemiology at the Mailman School of Public Health at Columbia University.  
 
 I previously worked as a technical research analyst in Global Health Science at University of California, San Francisco, on a number of international projects related to HIV prevention, care, and treatment, as well as for an initiative addressing preterm birth in East Africa. I am primarily interested in “leakages” along the HIV care continuum; maternal, neonatal, and child health; health systems strengthening; and implementation science.  
+
+See more about me [here](about.html).  
+<br>
+
+### Work examples
+[Dashboard](dashboard.html)  
 <br>
 
 ##### Contact Information
