--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ output:
 MPH student, Department of Epidemiology  
 Columbia University, Mailman School of Public Health  
 
-<img src = "images/PLACEHOLDER" 
+<img src = "images/GLiu_Headshot.jpg" 
   style="width:300px; display: block; margin-left: auto; margin-right: auto; border: 5px solid">
 <br>
 
